登录 注册  修改密码  登出  发请求的时候，友好的弹出对话框提示

--- a/weitaixin/src/main/AndroidManifest.xml
+++ b/weitaixin/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:name=".WeiTaiXinApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:theme="@style/AppTheme"
+        android:theme="@android:style/Theme.Light.NoTitleBar"
         tools:replace="android:icon">
 
         <activity android:name=".fragment.MeMainFragmentActivity">
