消息模块，界面跳转

--- a/weitaixin/build.gradle
+++ b/weitaixin/build.gradle
@@ -32,6 +32,7 @@ android {
 }
 
 dependencies {
+    compile project(':refreshlib')
     compile project(':library')
     compile fileTree(include: ['*.jar'], dir: 'libs')
 }
