--- a/weitaixin/src/main/AndroidManifest.xml
+++ b/weitaixin/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
     <application
         android:name=".WeiTaiXinApplication"
         android:allowBackup="true"
+        android:label="@string/app_name"
         android:icon="@mipmap/ic_launcher"
         android:theme="@android:style/Theme.Light.NoTitleBar"
         tools:replace="android:icon">
@@ -33,6 +34,9 @@
         <activity android:name=".activity.WoMessageActivity" />
         <activity android:name=".activity.SetSystemSuggestionActivity" />
         <activity android:name=".activity.SetSystemResetPasswordActivity" />
+        <activity android:name=".activity.LoginSmsAuthCodeActivity" />
+        <activity android:name=".activity.WoMessagOfSystemMessageActivity" />
+        <activity android:name=".activity.WoMessagOfReplyMessageActivity" />
         <activity android:name=".ui.demo.ViewActivity" />
 
         <activity android:name=".ui.demo.DeviceListActivity"/>
