记录界面   记录列表显示

--- a/weitaixin/src/main/AndroidManifest.xml
+++ b/weitaixin/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
         <activity android:name=".activity.WoMessageActivity" />
         <activity android:name=".activity.SetSystemSuggestionActivity" />
         <activity android:name=".activity.SetSystemResetPasswordActivity" />
+        <activity android:name=".activity.SetSystemGuardianActivity" />
         <activity android:name=".activity.LoginSmsAuthCodeActivity" />
         <activity android:name=".activity.WoMessagOfSystemMessageActivity" />
         <activity android:name=".activity.WoMessagOfReplyMessageActivity" />
