--- a/weitaixin/src/main/AndroidManifest.xml
+++ b/weitaixin/src/main/AndroidManifest.xml
@@ -4,15 +4,15 @@
     package="cn.ihealthbaby.weitaixin">
 
 
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.camera" />
-
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:name=".WeiTaiXinApplication"
         android:allowBackup="true"
-        android:label="@string/app_name"
+        android:label= "@string/app_name"
         android:icon="@mipmap/ic_launcher"
         android:theme="@android:style/Theme.Light.NoTitleBar"
         tools:replace="android:icon">
@@ -30,11 +30,14 @@
         <activity android:name=".activity.SetSystemActivity" />
         <activity android:name=".activity.WoInformationActivity" />
         <activity android:name=".activity.InfoEditActivity" />
+        <activity android:name=".activity.GradedActivity" />
         <activity android:name=".activity.WoGoldenActivity" />
         <activity android:name=".activity.WoMessageActivity" />
+        <activity android:name=".activity.AskDoctorActivity" />
         <activity android:name=".activity.SetSystemSuggestionActivity" />
         <activity android:name=".activity.SetSystemResetPasswordActivity" />
         <activity android:name=".activity.SetSystemGuardianActivity" />
+        <activity android:name=".activity.SetSystemUploadActivity" />
         <activity android:name=".activity.LoginSmsAuthCodeActivity" />
         <activity android:name=".activity.WoMessagOfSystemMessageActivity" />
         <activity android:name=".activity.WoMessagOfReplyMessageActivity" />
