--- a/weitaixin/src/main/AndroidManifest.xml
+++ b/weitaixin/src/main/AndroidManifest.xml
@@ -8,13 +8,17 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".WeiTaiXinApplication"
         android:allowBackup="true"
-        android:label= "@string/app_name"
         android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
         android:theme="@android:style/Theme.Light.NoTitleBar"
         tools:replace="android:icon">
 
@@ -44,7 +48,7 @@
         <activity android:name=".activity.WoMessagOfReplyMessageActivity" />
         <activity android:name=".ui.demo.ViewActivity" />
 
-        <activity android:name=".ui.demo.DeviceListActivity"/>
+        <activity android:name=".ui.demo.DeviceListActivity" />
 
 
         <activity
