我的消息修改 “几天前”

--- a/weitaixin/build.gradle
+++ b/weitaixin/build.gradle
@@ -35,5 +35,6 @@ dependencies {
     compile project(':refreshlib')
     compile project(':library')
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.orhanobut:logger:1.11'
 }
 
