修改  系统设置 里面的 监控设置，上传设置  SlideSwitch

--- a/weitaixin/src/main/AndroidManifest.xml
+++ b/weitaixin/src/main/AndroidManifest.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="cn.ihealthbaby.weitaixin">
+<manifest package="cn.ihealthbaby.weitaixin"
+          xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools">
 
 
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
 
-    <uses-feature android:name="android.hardware.camera" />
-    <uses-feature android:name="android.hardware.camera.autofocus" />
+    <uses-feature android:name="android.hardware.camera"/>
+    <uses-feature android:name="android.hardware.camera.autofocus"/>
 
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:name=".WeiTaiXinApplication"
@@ -24,37 +24,37 @@
 
         <activity android:name=".fragment.MeMainFragmentActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
 
-        <activity android:name=".activity.RegistActivity" />
-        <activity android:name=".activity.LoginActivity" />
-        <activity android:name=".activity.SetSystemActivity" />
-        <activity android:name=".activity.WoInformationActivity" />
-        <activity android:name=".activity.InfoEditActivity" />
-        <activity android:name=".activity.GradedActivity" />
-        <activity android:name=".activity.WoGoldenActivity" />
-        <activity android:name=".activity.WoMessageActivity" />
-        <activity android:name=".activity.AskDoctorActivity" />
-        <activity android:name=".activity.SetSystemSuggestionActivity" />
-        <activity android:name=".activity.SetSystemResetPasswordActivity" />
-        <activity android:name=".activity.SetSystemGuardianActivity" />
-        <activity android:name=".activity.SetSystemUploadActivity" />
-        <activity android:name=".activity.LoginSmsAuthCodeActivity" />
-        <activity android:name=".activity.WoMessagOfSystemMessageActivity" />
-        <activity android:name=".activity.WoMessagOfReplyMessageActivity" />
-        <activity android:name=".ui.demo.ViewActivity" />
-        <activity android:name=".ui.demo.DeviceListActivity" />
+        <activity android:name=".activity.RegistActivity"/>
+        <activity android:name=".activity.LoginActivity"/>
+        <activity android:name=".activity.SetSystemActivity"/>
+        <activity android:name=".activity.WoInformationActivity"/>
+        <activity android:name=".activity.InfoEditActivity"/>
+        <activity android:name=".activity.GradedActivity"/>
+        <activity android:name=".activity.WoGoldenActivity"/>
+        <activity android:name=".activity.WoMessageActivity"/>
+        <activity android:name=".activity.AskDoctorActivity"/>
+        <activity android:name=".activity.SetSystemSuggestionActivity"/>
+        <activity android:name=".activity.SetSystemResetPasswordActivity"/>
+        <activity android:name=".activity.SetSystemGuardianActivity"/>
+        <activity android:name=".activity.SetSystemUploadActivity"/>
+        <activity android:name=".activity.LoginSmsAuthCodeActivity"/>
+        <activity android:name=".activity.WoMessagOfSystemMessageActivity"/>
+        <activity android:name=".activity.WoMessagOfReplyMessageActivity"/>
+        <activity android:name=".ui.demo.ViewActivity"/>
+        <activity android:name=".ui.demo.DeviceListActivity"/>
 
         <activity
             android:name=".ui.monitor.MonitorActivity"
-            android:label="@string/title_activity_monitor" />
+            android:label="@string/title_activity_monitor"/>
         <activity
             android:name=".ui.monitor.CurveDetialActivity"
-            android:label="@string/title_activity_curve_detial" />
+            android:label="@string/title_activity_curve_detial"/>
 
         <receiver android:name=".library.data.bluetooth.mode.spp.BluetoothReceiver"/>
 
