我的-我的消息 列表 左划删除 部分代码

--- a/weitaixin/build.gradle
+++ b/weitaixin/build.gradle
@@ -39,5 +39,6 @@ dependencies {
     compile 'com.orhanobut:logger:1.11'
     //时间选择器
     compile 'com.bigkoo:pickerview:1.0.0'
+    compile files('libs/nineoldandroids-2.4.0.jar')
 }
 
