--- a/weitaixin/src/main/AndroidManifest.xml
+++ b/weitaixin/src/main/AndroidManifest.xml
@@ -60,6 +60,7 @@
         <activity
             android:name=".ui.monitor.CurveDetialActivity"
             android:label="@string/title_activity_curve_detial"/>
+        <activity android:name=".activity.AboutActivity"/>
 
         <receiver android:name=".library.data.bluetooth.mode.spp.BluetoothReceiver"/>
 
