我的-系统设置-关于微胎心 ：增加 欢迎，隐私协议，产品功能，使用流程和隐私协议界面

--- a/weitaixin/src/main/AndroidManifest.xml
+++ b/weitaixin/src/main/AndroidManifest.xml
@@ -61,6 +61,10 @@
             android:name=".ui.monitor.CurveDetialActivity"
             android:label="@string/title_activity_curve_detial"/>
         <activity android:name=".activity.AboutActivity"/>
+        <activity android:name=".activity.WelcomeActiviy"/>
+        <activity android:name=".activity.FeatureActiviy"/>
+        <activity android:name=".activity.UseProcessActiviy"/>
+        <activity android:name=".activity.UseProtocolActiviy"/>
 
         <receiver android:name=".library.data.bluetooth.mode.spp.BluetoothReceiver"/>
 
