--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ allprojects {
         jcenter()
         maven {
             url 'http://192.168.1.253:8081/content/groups/public/'
+            maven { url "https://jitpack.io" }
         }
     }
 }
