--- a/weitaixin/src/main/AndroidManifest.xml
+++ b/weitaixin/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="cn.ihealthbaby.weitaixin" >
+    package="cn.ihealthbaby.weitaixin">
 
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -19,8 +19,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Light.NoTitleBar"
-        tools:replace="android:icon" >
-        <activity android:name=".ui.MeMainFragmentActivity" >
+        tools:replace="android:icon">
+        <activity android:name=".ui.MeMainFragmentActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -63,10 +63,8 @@
 
         <receiver android:name=".library.data.bluetooth.mode.spp.BluetoothReceiver" />
 
-        <activity
-            android:name=".ui.pay.PayAccountActivity"
-            android:label="@string/title_activity_pay_account" >
-        </activity>
+        <activity android:name=".ui.pay.PayAccountActivity"/>
+        <activity android:name=".ui.record.RecordPlayActivity"/>
     </application>
 
 </manifest>
