--- a/weitaixin/src/main/AndroidManifest.xml
+++ b/weitaixin/src/main/AndroidManifest.xml
@@ -69,8 +69,10 @@
         <activity android:name=".ui.pay.PayRentInformationActivity" />
         <activity android:name=".ui.pay.PayHospitalChooseActivity" />
         <activity android:name=".ui.pay.PayCityChooseActivity" />
+        <activity android:name=".ui.pay.PayOrderInformationActivity" />
+        <activity android:name=".ui.pay.PayGoingOrderActivity" />
+        <activity android:name=".ui.pay.PayConfirmOrderActivity" />
 
-        <service android:name=".service.UploadService"/>
     </application>
 
 </manifest>
