--- a/weitaixin/src/main/AndroidManifest.xml
+++ b/weitaixin/src/main/AndroidManifest.xml
@@ -72,6 +72,7 @@
         <activity android:name=".ui.pay.PayOrderInformationActivity" />
         <activity android:name=".ui.pay.PayGoingOrderActivity" />
         <activity android:name=".ui.pay.PayConfirmOrderActivity" />
+        <activity android:name=".ui.pay.PayAffirmPaymentActivity" />
 
     </application>
 
