--- a/weitaixinpro/build.gradle
+++ b/weitaixinpro/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.0"
 
     defaultConfig {
-        applicationId "weitaixinpro.ihealthbaby.com.weitaixinpro"
+        applicationId "cn.ihealthbaby.weitaixinpro"
         minSdkVersion 14
         targetSdkVersion 23
         versionCode 1
