--- a/weitaixin/src/main/AndroidManifest.xml
+++ b/weitaixin/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Light.NoTitleBar"
+        android:hardwareAccelerated="false"
         tools:replace="android:icon">
         <activity android:name=".ui.MeMainFragmentActivity">
             <intent-filter>
