--- a/weitaixinpro/build.gradle
+++ b/weitaixinpro/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "cn.ihealthbaby.weitaixinpro"
-        minSdkVersion 14
+        minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -20,6 +20,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile project(':library')
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:23.0.0'
 }
