--- a/weitaixin/src/main/AndroidManifest.xml
+++ b/weitaixin/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="cn.ihealthbaby.weitaixin">
+    package="cn.ihealthbaby.weitaixin" >
 
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -16,12 +16,12 @@
     <application
         android:name=".WeiTaiXinApplication"
         android:allowBackup="true"
+        android:hardwareAccelerated="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Light.NoTitleBar"
-        android:hardwareAccelerated="false"
-        tools:replace="android:icon">
-        <activity android:name=".ui.MeMainFragmentActivity">
+        tools:replace="android:icon" >
+        <activity android:name=".ui.MeMainFragmentActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -74,7 +74,8 @@
         <activity android:name=".ui.pay.PayGoingOrderActivity" />
         <activity android:name=".ui.pay.PayConfirmOrderActivity" />
         <activity android:name=".ui.pay.PayAffirmPaymentActivity" />
-
+        <activity android:name=".ui.monitor.CurvePlayActivity" />
+         
     </application>
 
 </manifest>
