--- a/weitaixinpro/src/main/AndroidManifest.xml
+++ b/weitaixinpro/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Light.NoTitleBar">
         <activity
-            android:name=".ui.MeMainFragmentActivity"
+            android:name=".ui.login.LoginActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -19,7 +19,7 @@
         </activity>
         <activity android:name=".ui.settings.MonitorSetActivity"/>
         <activity android:name=".ui.monitor.MonitorCommonSense"/>
-        <activity android:name=".ui.login.LoginActivity"/>
+        <activity android:name=".ui.MainActivity"/>
     </application>
 
 </manifest>
