--- a/weitaixinpro/build.gradle
+++ b/weitaixinpro/build.gradle
@@ -21,6 +21,7 @@ android {
 
 dependencies {
     compile project(':library')
+    compile project(':refreshlib')
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.0.0'
 }
