修改 关于  增加 监护常识页面

--- a/weitaixin/src/main/AndroidManifest.xml
+++ b/weitaixin/src/main/AndroidManifest.xml
@@ -76,6 +76,7 @@
         <activity android:name=".ui.pay.PayAffirmPaymentActivity" />
         <activity android:name=".ui.monitor.CurvePlayActivity" />
         <activity android:name=".ui.pay.PayOrderDetailsActivity" />
+        <activity android:name=".ui.monitor.MonitorCommonSense" />
 
     </application>
 
