--- a/weitaixin/src/main/AndroidManifest.xml
+++ b/weitaixin/src/main/AndroidManifest.xml
@@ -77,6 +77,7 @@
         <activity android:name=".ui.monitor.CurvePlayActivity" />
         <activity android:name=".ui.pay.PayOrderDetailsActivity" />
 
+        <service android:name=".service.AdviceSettingService"/>
     </application>
 
 </manifest>
