--- a/weitaixin/build.gradle
+++ b/weitaixin/build.gradle
@@ -38,6 +38,7 @@ android {
 dependencies {
     compile project(':refreshlib')
     compile project(':library')
+    compile project(':uilibrary')
     compile fileTree(include: ['*.jar'], dir: 'libs')
 }
 
