--- a/weitaixinpro/build.gradle
+++ b/weitaixinpro/build.gradle
@@ -22,6 +22,7 @@ android {
 dependencies {
     compile project(':library')
     compile project(':refreshlib')
+    compile project(':uilibrary')
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.0.0'
 }
