--- a/weitaixin/src/main/AndroidManifest.xml
+++ b/weitaixin/src/main/AndroidManifest.xml
@@ -66,7 +66,9 @@
         <activity android:name=".ui.pay.PayAccountActivity" />
         <activity android:name=".ui.pay.PayMimeOrderActivity" />
         <activity android:name=".ui.pay.PayMimeAddressActivity" />
-        <activity android:name=".ui.pay.PayAddAddressActivity" />
+        <activity android:name=".ui.pay.PayAddAddressActivity"
+            android:windowSoftInputMode="stateVisible"
+            />
         <activity android:name=".ui.pay.PayRentInformationActivity" />
         <activity android:name=".ui.pay.PayHospitalChooseActivity" />
         <activity android:name=".ui.pay.PayRentChooseProvincesLeftActivity" />
