--- a/weitaixin/src/main/AndroidManifest.xml
+++ b/weitaixin/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="cn.ihealthbaby.weitaixin" >
+    package="cn.ihealthbaby.weitaixin">
 
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -20,8 +20,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Light.NoTitleBar"
-        tools:replace="android:icon" >
-        <activity android:name=".ui.login.LoginActivity" >
+        tools:replace="android:icon">
+        <activity android:name=".ui.login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -66,9 +66,13 @@
         <activity android:name=".ui.pay.PayAccountActivity" />
         <activity android:name=".ui.pay.PayMimeOrderActivity" />
         <activity android:name=".ui.pay.PayMimeAddressActivity" />
-        <activity android:name=".ui.pay.PayAddAddressActivity"
-            android:windowSoftInputMode="stateVisible"
-            />
+        <activity android:name=".ui.pay.PayMimeAddressWithEditActivity" />
+        <activity
+            android:name=".ui.pay.PayAddAddressActivity"
+            android:windowSoftInputMode="stateVisible" />
+        <activity
+            android:name=".ui.pay.PayAddAddressWithEditActivity"
+            android:windowSoftInputMode="stateVisible" />
         <activity android:name=".ui.pay.PayRentInformationActivity" />
         <activity android:name=".ui.pay.PayHospitalChooseActivity" />
         <activity android:name=".ui.pay.PayRentChooseProvincesLeftActivity" />
@@ -83,7 +87,7 @@
         <activity android:name=".ui.pay.PayRentChooseCityRightActivity" />
         <activity android:name=".ui.monitor.MonitorCommonSense" />
 
-        <service android:name=".service.AdviceSettingService"/>
+        <service android:name=".service.AdviceSettingService" />
     </application>
 
 </manifest>
