--- a/weitaixin/src/main/AndroidManifest.xml
+++ b/weitaixin/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Light.NoTitleBar"
         tools:replace="android:icon">
-        <activity android:name=".ui.login.LoginActivity">
+        <activity android:name=".ui.WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,9 +29,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.login.RegistActivity" />
-        <activity android:name=".ui.MeMainFragmentActivity"
-            android:launchMode="singleTask"
-            />
+        <activity
+            android:name=".ui.MeMainFragmentActivity"
+            android:launchMode="singleTask" />
+        <activity android:name=".ui.login.LoginActivity" />
         <activity android:name=".ui.mine.SetSystemActivity" />
         <activity android:name=".ui.mine.WoInformationActivity" />
         <activity android:name=".ui.login.InfoEditActivity" />
