--- a/weitaixin/src/main/AndroidManifest.xml
+++ b/weitaixin/src/main/AndroidManifest.xml
@@ -22,7 +22,9 @@
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Light.NoTitleBar"
         tools:replace="android:icon">
-        <activity android:name=".ui.WelcomeActivity">
+        <activity
+            android:name=".ui.WelcomeActivity"
+            android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
