--- a/uilibrary/build.gradle
+++ b/uilibrary/build.gradle
@@ -21,4 +21,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    compile project(':library')
+
 }
