--- a/weitaixinpro/src/main/AndroidManifest.xml
+++ b/weitaixinpro/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
         <activity android:name=".ui.MainActivity"/>
         <activity android:name=".ui.monitor.MonitorActivity"/>
         <activity android:name=".ui.monitor.MonitorDetialActivity"/>
+
+        <service android:name=".service.AdviceSettingService"/>
     </application>
 
 </manifest>
