--- a/weitaixin/build.gradle
+++ b/weitaixin/build.gradle
@@ -53,11 +53,14 @@ android {
 
     }
 }
-
+repositories {
+    mavenCentral()
+}
 dependencies {
     compile project(':refreshlib')
     compile project(':library')
     compile project(':uilibrary')
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile project(':umengupgradelibrary')
 }
 
