增加获取配置的服务
调整UI,显示列表总数

--- a/weitaixinpro/src/main/AndroidManifest.xml
+++ b/weitaixinpro/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         <activity android:name=".ui.monitor.MonitorActivity"/>
         <activity android:name=".ui.monitor.MonitorDetialActivity"/>
 
-        <service android:name=".service.AdviceSettingService"/>
+        <service android:name=".service.ConfigService"/>
     </application>
 
 </manifest>
