增加上传模块服务 增加延长时间 数据库增加serviceId字段

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include ':weitaixin', ':library', ':refreshlib', ':uilibrary', 'weitaixinpro', ':umengupgradelibrary'
+include ':library', ':refreshlib', ':uilibrary', 'weitaixinpro'
 
