.gradle里去掉友盟

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,7 @@
-
 include ':library'
 include ':refreshlib'
-include ':uilibrary'
-include 'weitaixin'
-//include 'weitaixinpro'
-//include 'umengupgradelibrary'
+include ':weitaixin'
+include ':weitaixinpro'
+//include ':umengupgradelibrary'
 
 
