--- a/weitaixin/build.gradle
+++ b/weitaixin/build.gradle
@@ -61,6 +61,6 @@ dependencies {
     compile project(':library')
     compile project(':uilibrary')
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile project(':umengupgradelibrary')
+//    compile project(':umengupgradelibrary')
 }
 
