--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,13 @@
 buildscript {
     repositories {
         maven { url 'http://192.168.1.253:8081/content/groups/public/' }
-        jcenter()
+        maven { url 'http://maven.oschina.net/content/groups/public/' }
+        maven { url "https://jitpack.io" }
+//        maven { url "http://jcenter.chengyong.net/" }
+//        jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.2.3'
+        classpath 'com.android.tools.build:gradle:1.3.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -20,12 +23,14 @@ allprojects {
         maven {
             url 'http://192.168.1.253:8081/content/groups/public/'
         }
+        maven { url 'http://maven.oschina.net/content/groups/public/' }
         maven { url "https://jitpack.io" }
-        jcenter()
+//        maven { url "http://jcenter.chengyong.net/" }
+//        jcenter()
     }
 }
-
-configurations.all {
-    resolutionStrategy.cacheDynamicVersionsFor 1, 'minutes'
-}
+//
+//configurations.all {
+//    resolutionStrategy.cacheDynamicVersionsFor 1, 'minutes'
+//}
 
