--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ allprojects {
         maven { url "https://jitpack.io" }
 //        maven { url "http://jcenter.chengyong.net/" }
 //        jcenter()
+        mavenCentral()
     }
 }
 //
