--- a/umengupgradelibrary/src/main/AndroidManifest.xml
+++ b/umengupgradelibrary/src/main/AndroidManifest.xml
@@ -19,10 +19,10 @@
         <!--android:value="${UMENG_APPKEY_VALUE}"/>-->
         <meta-data
         android:name="UMENG_CHANNEL"
-        android:value="Channel ID"/>
+        android:value="weitaixin"/>
         <meta-data
         android:name="UMENG_APPKEY"
-        android:value="56021f19e0f55aef1e0043c4"/>
+        android:value="55addb0067e58eae9e0000e3"/>
 
         <service
             android:name="com.umeng.update.net.DownloadingService"
