设置应用名为 微胎心pro

--- a/weitaixinpro/src/main/AndroidManifest.xml
+++ b/weitaixinpro/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:allowBackup="true"
         android:hardwareAccelerated="false"
         android:icon="@mipmap/ic_launcher"
+        android:label="微胎心pro"
         android:theme="@android:style/Theme.Light.NoTitleBar">
         <activity
             android:name=".ui.login.BindActivity"
