--- a/umengupgradelibrary/build.gradle
+++ b/umengupgradelibrary/build.gradle
@@ -1,10 +1,10 @@
 apply plugin: 'com.android.library'
 
 
-dependencies {
-    compile 'com.umeng.analytics:analytics:latest.integration'
-    compile files('libs/umeng-update-v2.6.0.1.jar')
-}
+//dependencies {
+//    compile 'com.umeng.analytics:analytics:latest.integration'
+//    compile files('libs/umeng-update-v2.6.0.1.jar')
+//}
 android {
     compileSdkVersion 22
     buildToolsVersion '22.0.1'
