--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,6 @@ buildscript {
         maven { url 'http://192.168.1.253:8081/content/groups/public/' }
         maven { url 'http://maven.oschina.net/content/groups/public/' }
         maven { url "https://jitpack.io" }
-//        maven { url "http://jcenter.chengyong.net/" }
 //        jcenter()
     }
     dependencies {
@@ -20,12 +19,10 @@ buildscript {
 
 allprojects {
     repositories {
-        maven {
-            url 'http://192.168.1.253:8081/content/groups/public/'
-        }
+        maven { url 'http://192.168.1.253:8081/content/groups/public/' }
         maven { url 'http://maven.oschina.net/content/groups/public/' }
+        maven { url "http://dl.bintray.com/fir/maven" }
         maven { url "https://jitpack.io" }
-//        maven { url "http://jcenter.chengyong.net/" }
 //        jcenter()
         mavenCentral()
     }
