--- a/weitaixinpro/src/main/AndroidManifest.xml
+++ b/weitaixinpro/src/main/AndroidManifest.xml
@@ -12,9 +12,11 @@
         android:icon="@mipmap/ic_launcher"
         android:label="微胎心pro"
         android:theme="@android:style/Theme.Light.NoTitleBar">
-        <activity
-            android:name=".ui.login.BindActivity"
-            >
+        <meta-data
+            android:name="BUG_HD_SDK_GENERAL_KEY"
+            android:value="186eecb69205ccf2221f14d07ad751a0"/>
+
+        <activity android:name=".ui.login.BindActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
