--- a/weitaixinpro/src/main/AndroidManifest.xml
+++ b/weitaixinpro/src/main/AndroidManifest.xml
@@ -3,7 +3,11 @@
     package="cn.ihealthbaby.weitaixinpro"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>
+    <uses-permission android:name="android.permission.GET_TASKS"></uses-permission>
 
     <application
         android:name=".WeiTaiXinProApplication"
