--- a/weitaixinpro/src/main/AndroidManifest.xml
+++ b/weitaixinpro/src/main/AndroidManifest.xml
@@ -29,7 +29,9 @@
         </activity>
         <activity android:name=".ui.settings.MonitorSetActivity"/>
         <activity android:name=".ui.monitor.MonitorCommonSense"/>
-        <activity android:name=".ui.MainActivity"/>
+        <activity
+            android:name=".ui.MainActivity"
+            android:launchMode="singleTask"/>
         <activity android:name=".ui.monitor.MonitorActivity"/>
         <activity android:name=".ui.monitor.MonitorDetialActivity"/>
         <activity android:name=".ui.monitor.GuardianStateActivity"/>
