--- a/weitaixin/src/main/AndroidManifest.xml
+++ b/weitaixin/src/main/AndroidManifest.xml
@@ -143,7 +143,7 @@
         </activity>
 
         <receiver
-            android:name="net.sourceforge.simcpux.AppRegister">
+            android:name=".net.sourceforge.simcpux.AppRegister">
             <intent-filter>
                 <action android:name="com.tencent.mm.plugin.openapi.Intent.ACTION_REFRESH_WXAPP" />
             </intent-filter>
