--- a/weitaixinpro/src/main/AndroidManifest.xml
+++ b/weitaixinpro/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>
     <uses-permission android:name="android.permission.GET_TASKS"></uses-permission>
-
+    <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
     <application
         android:name=".WeiTaiXinProApplication"
         android:allowBackup="true"
