--- a/weitaixin/src/main/AndroidManifest.xml
+++ b/weitaixin/src/main/AndroidManifest.xml
@@ -151,6 +151,7 @@
 
 
         <service android:name=".service.AdviceSettingService" />
+        <service android:name=".DownloadService" />
     </application>
 
 </manifest>
