--- a/weitaixin/src/main/AndroidManifest.xml
+++ b/weitaixin/src/main/AndroidManifest.xml
@@ -158,6 +158,7 @@
 
 
         <service android:name=".service.AdviceSettingService"/>
+        <service android:name=".service.CommonConfigService"/>
         <service android:name=".DownloadService"/>
     </application>
 
