--- a/bluetools/build.gradle
+++ b/bluetools/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.android.support:support-v4:23.1.0'
     compile 'com.android.support:design:23.1.0'
     compile 'com.jakewharton:butterknife:5.1.1'
+    compile 'de.greenrobot:eventbus:2.4.0'
 }
